--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # --- Unity standard ignores ---
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
-/[Mm]emoryCaptures/
-/[Bb]ackup/
-/Assets/AssetStoreTools*
+/Idle Skiller/[Ll]ibrary/
+/Idle Skiller/[Tt]emp/
+/Idle Skiller/[Oo]bj/
+/Idle Skiller/[Bb]uild/
+/Idle Skiller/[Bb]uilds/
+/Idle Skiller/[Ll]ogs/
+/Idle Skiller/[Uu]ser[Ss]ettings/
+/Idle Skiller/[Mm]emoryCaptures/
+/Idle Skiller/[Bb]ackup/
+/Idle Skiller/Assets/AssetStoreTools*
 
 # Visual Studio / Rider noise
 *.csproj
