feat: implement progress job engine

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,8 +14,13 @@
 
   <ItemGroup>
     <Compile Include="InventoryServiceTests.cs" />
+    <Compile Include="ProgressJobTests.cs" />
     <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Systems\SaveData.cs" />
     <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Systems\InventoryService.cs" />
     <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Systems\CurrencyService.cs" />
+    <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Core\Events\IEventBus.cs" />
+    <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Core\Events\EventBus.cs" />
+    <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Systems\Progress\ProgressJob.cs" />
+    <Compile Include="..\Idle Skiller\Assets\_Project\Scripts\Systems\Progress\JobRunner.cs" />
   </ItemGroup>
 </Project>
